--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header>
+		<div class="header-content">
+			<h2>Explore The colorful World</h2>
+			<div class="line"></div>
+			<h1>A WONDERFUL GIFT</h1>
+			<a href="#" class="ctn">Learn more</a>
+
+		</div>
+	</header>
 
 
 
