--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Donki</title>
+	<title>ADVENTURE</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+	<!--navbar -->
+	<nav class="navbar">
+		<h1 class="logo">ADVENTURE</h1>
+		<ul class="nav-links">
+			<li class="active"><a href="#"></a>Home</li>
+			<li><a href="#"></a>Toure</li>
+			<li><a href="#"></a>Explore</li>
+			<li><a href="#"></a>About</li>
+			<li class="ctn"><a href="#"></a>Contact</li>
+
+		</ul>
+
+	</nav>
 	<header>
 		<div class="header-content">
 			<h2>Explore The colorful World</h2>
