--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<li class="ctn"><a href="#"></a>Contact</li>
 
 		</ul>
-		<img src="./img/menu-btn.png" alt="" class="menu-btn">
+		<img src="./images/menu-button-of-three-horizontal-lines.png" alt="" class="menu-btn">
 
 	</nav>
 	<header>
