--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ADVENTURE</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!--==== CSS ====-->
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -61,10 +61,12 @@
 	   </div>
 
 	</section>
+	<!-- == End Events == -->
 
 	<section class="explore">
 		<div class="explore-content">
 			<h1>EXPLORE THE WORLD</h1>
+			<div class="line"></div>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, ipsam omnis adipisci tenetur facilis debitis ullam possimus.</p>
 		<a href="#" class="ctn">Learn More</a>
 
@@ -85,6 +87,6 @@
 
 
 	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>	
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>	
 </body>
 </html>
