--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	</section>
 	<!-- == End Events == -->
 
+	
 	<section class="explore">
 		<div class="explore-content">
 			<h1>EXPLORE THE WORLD</h1>
@@ -73,6 +74,30 @@
 		</div>
 
 	</section>
+
+	<!-- == Tours == -->
+
+	<section class="tours">
+		<div class="row">
+			<div class="col">
+				<h1>UPCOMING TOURS DESTINATION</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam esse molestias fugit enim facere commodi temporibus, consectetur dignissimos, delectus sapiente nesciunt voluptatem eum natus nihil deserunt itaque, impedit similique saepe.</p>
+				<a href="#" class="ctn">Learn More</a>
+			</div>
+			<div class="col image-col">
+				<div class="image-gallery">
+					<img src="./images/Hill3.png" alt="">
+					<img src="./images/Hill3.png" alt="">
+					<img src="./images/Hill3.png" alt="">
+					<img src="./images/Hill3.png" alt="">
+
+				</div>
+
+			</div>
+
+		</div>
+	</section>
+	<!-- == End Tours == -->
 
 
 	<script>
