--- a/index.html
+++ b/index.html
@@ -79,17 +79,18 @@
 
 	<section class="tours">
 		<div class="row">
-			<div class="col">
+			<div class="col content-col">
 				<h1>UPCOMING TOURS DESTINATION</h1>
+				<div class="line"></div>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam esse molestias fugit enim facere commodi temporibus, consectetur dignissimos, delectus sapiente nesciunt voluptatem eum natus nihil deserunt itaque, impedit similique saepe.</p>
 				<a href="#" class="ctn">Learn More</a>
 			</div>
 			<div class="col image-col">
 				<div class="image-gallery">
-					<img src="./images/Hill3.png" alt="">
-					<img src="./images/Hill3.png" alt="">
-					<img src="./images/Hill3.png" alt="">
-					<img src="./images/Hill3.png" alt="">
+					<img src="./images/hill1.jpg" alt="">
+					<img src="./images/bg hill6 - Copy.png" alt="">
+					<img src="./images/bg hill7 - Copy.png" alt="">
+					<img src="./images/bg hill3.png" alt="">
 
 				</div>
 
@@ -98,6 +99,12 @@
 		</div>
 	</section>
 	<!-- == End Tours == -->
+
+	<section class="footer">
+		<p>Gulshan-2, Dhaka-1212, Bangladesh / Phone no: 000,000' 000/ Email: Contack@example.com</p>
+		<p>Copyright C 2022 outdor Adventure</p>
+
+	</section>
 
 
 	<script>
